<resources>
    <string name="app_name">Cambios y permutas</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyBvDFwTwCUTPOh37bhyGcImcRnsd47coGY
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="menu_lateral_options">
        <item>DOX</item>
        <item>Documentos</item>
        <item>Servicios</item>
        <item>Estado de Cuenta</item>
        <item>Otros Servicios</item>
        <item>Configuración</item>
    </string-array>
    <string name="action_settings">Cerrar sesión</string>
    <string name="action_contacto">Contacto</string>
    <string name="update_document">Editar</string>
    <string name="delete_document">Borrar</string>
    <string name="record_documents">Historial de documentos</string>
    <string name="documents_list">Documentos</string>
    <string name="ok">Aceptar</string>
    <string name="no_internet_connection">El telefono no está conectado a internet</string>
    <string name="loading_msg">cargando…</string>
    <string name="loading_contract_msg">creando…</string>
    <string name="link_c_p">
        <a href="https://www.cambiosypermutas.com.mx">Cambios y permutas</a>
    </string>
    <string name="link_web48">
        <a href="https://nearshorecoders.com/">Nearshore Coders</a>
    </string>
    <string name="link_politics_c_p">
        <a href="http://politics.cambiosypermutas.com.mx/">Políticas de privacidad -  Manual de uso</a>
    </string>
    <string name="send_correo">
        <a href="Abriendo correo">Web 48</a>
    </string>
    <string name="login_welcome_msg">¡Bienvenido a tu proceso de cambio de plaza!</string>
    <string name="login_email_label">Correo</string>
    <string name="login_password_label">Contraseña</string>
    <string name="login_password_recovery_label">¿Olvidaste tu contraseña?</string>
    <string name="login_login_label">ENTRAR</string>
    <string name="login_info_label">¿EN QUÉ CONSISTE?</string>
    <string name="login_sign_on_label">CONTRATAR</string>
    <string name="info_done_label">LISTO</string>
    <string name="info_msg">Cras quis nulla commodo, aliquam lectus sed, blandit augue. Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis. Nunc eu tellus tortor. Cras quis nulla commodo, aliquam lectus sed, blandit augue. Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis. Nunc eu tellus tortor.\nCras quis nulla commodo, aliquam lectus sed, blandit augue. Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis. Nunc eu tellus tortor. Cras quis nulla commodo, aliquam lectus sed, blandit augue. Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis. Nunc eu tellus tortor.</string>
    <string name="logging_msg">Iniciando sesión…</string>
    <string name="act_msg">Datos actualizados…</string>
    <string name="logging_fail">No se pudo iniciar sesión</string>
    <string name="email_invalid">El correo no es valido</string>
    <string name="fields_empty">Ingresa todos los campos</string>
    <string name="register_msg">Procesando registro</string>
    <string name="cargando_msg">Cargando</string>
    <string name="validando_codigo">Validando Código</string>
    <string name="contra_actu">Contraseña actualizada</string>
    <string name="calif_app">Califica Nuestra App Cambios y permutas en la Play Store</string>
    <string name="recover_welcome_msg">Ingresa tu correo electrónico y te enviaremos un enlace para recuperar tu contraseña.</string>
    <string name="recover_email_label">Ingresa número de teléfono</string>
    <string name="recover_recover_label">Enviar código</string>
    <string name="recover_back_label">Regresar</string>
    <string name="recover_resume_send_msg">Hemos enviado la contraseña a tu correo electrónico.\n\n Si requieres mayor soporte estamos a tus órdenes en el teléfono 5544332211</string>
    <string name="recover_done_label">LISTO</string>
    <string name="service_status_pending">Pendiente</string>
    <string name="service_status_on_process">En Proceso</string>
    <string name="service_status_canceled">Cancelado</string>
    <string name="service_status_finished">Finalizado</string>
    <string name="services_ongoing">Servicios en curso</string>
    <string name="services_completed">Servicios completados</string>
    <string name="no_services_requested_msg">Aún no has solicitado ningún servicio a Bovéda de documentos. Solicitalo fácil ahora.</string>
    <string name="no_services_completed_msg">Aún no se ha completado ninguna solicitud de servicio.</string>
    <string name="request_service">Solicitar servicio</string>
    <string name="folio_numero">Número de folio del servicio:</string>
    <string name="cancel_service">CANCELAR SERVICIO</string>
    <string name="service_details">Detalles de servicio</string>
    <string name="service_request">Solicitud de servicio</string>
    <string name="confirmation">Confirmación de servicio</string>
    <string name="continue_button">CONTINUAR</string>
    <string name="confirm">CONFIRMAR SERVICIO</string>
    <string name="address">Dirección</string>
    <string name="date">Fecha</string>
    <string name="time">Hora</string>
    <string name="documents">Documentos</string>
    <string name="notes">Notas</string>
    <string name="done">LISTO</string>
    <string name="confirmation_done_success">El servicio de recolección de documentos a sido confirmado con éxito</string>
    <string name="add_address_msg">Ingresa una dirección a buscar</string>
    <string name="searching_address">Buscando dirección</string>
    <string name="geocoding_problems">Ocurrieron problemas al buscar la dirección</string>
    <string name="cannot_find_address">No se encontró ninguna dirección similar a la ingresada</string>
    <string name="type_another_address">Ingresar otra dirección</string>
    <string name="user_account">Cuenta de Usuario</string>
    <string name="complete_register">Completa tu registro</string>
    <string name="payment_method">Método de Pago</string>
    <string name="back">ATRÁS</string>
    <string name="next">SIGUIENTE</string>
    <string name="email">Email*</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="recovery_question">Pregunta de Recuperación</string>
    <string name="answer">Respuesta</string>
    <string name="name">Nombre*</string>
    <string name="last_name">Apellido Paterno*</string>
    <string name="last_name_2">Apellido Materno</string>
    <string name="genre">Género</string>
    <string name="man">Hombre</string>
    <string name="woman">Mujer</string>
    <string name="birthday">Fecha de Nacimiento</string>
    <string name="phone">Teléfono</string>
    <string name="choose_payment_method_title">Elige tu método de pago</string>
    <string name="choose_payment_method_button">ELEGIR MÉTODO DE PAGO</string>
    <string name="open_pay">Openpay</string>
    <string name="paypal">Paypal</string>
    <string-array name="recover_question_array">
        <item>¿Primer nombre de tu abuelita materna?</item>
        <item>¿Cuál es tu color favorito?</item>
        <item>¿Cuál fue el nombre de tu primera mascota?</item>
        <item>¿En qué ciudad naciste?</item>
    </string-array>
    <string name="card_data">Datos de la Tarjeta</string>
    <string name="card_name">Nombre del titular*</string>
    <string name="card_number">Número de la tarjeta*</string>
    <string name="date_end">MM / AA</string>
    <string name="cvv">CVV</string>
    <string name="zip">Código Postal</string>
    <string name="add_payment_method">AGREGAR MÉTODO DE PAGO</string>
    <string name="finish_signup">Para finalizar el registro, se realizará un cobro por</string>
    <string name="finish_signup2">por concepto de suscripción anual al servicio de Cambios y permutas</string>
    <string name="signup_confirmation">Tu registro al servicio de Bóveda de documentos ha sido realizado con éxito.</string>
    <string name="pay_and_continue">PAGAR Y CONTINUAR</string>
    <string name="make_payment">Realizar pago</string>
    <string name="hire_dox_confirmation">Bienvenido a tu Boveda donde podrás resguardar de manera segura todos tus
        documentos, así como servicios de entrega y recolección de los mismos.</string>
    <string name="title_activity_maps">Map</string>
    <string name="not_same_password">El campo de Contraseña y Confirmar Contraseña tienen que ser iguales</string>
    <string name="create_account">CREAR CUENTA</string>
    <string name="create_account_confirmation">Para activar tu cuenta, ingresa al correo que proporcionaste y sigue las instrucciones</string>
    <string name="add_document">Agregar documento</string>
    <string name="no_documents_yet_msg">Aún no has agregado Documentos a esta lista, agrega tu primer documento y solicita un servicio de recolección</string>
    <string name="no_documents_movements_yet_msg">Aún no hay movimientos para este documento</string>
    <string name="document_in_boveda">En Boveda</string>
    <string name="document_with_me">En mi Poder</string>
    <string name="label_document_type">Tipo de Documento</string>
    <string name="label_optional_fields">Los siguientes campos son opcionales</string>
    <string name="keyword">Palabra clave</string>
    <string name="numero">Número</string>
    <string name="expedition">Expedición</string>
    <string name="expiration">Vencimiento</string>
    <string name="add_picture">Agregar una foto</string>
    <string name="save">GUARDAR</string>
    <string-array name="document_type">
        <item>Factura</item>
        <item>Llave</item>
        <item>Póliza</item>
        <item>Pagos</item>
        <item>Otros</item>
    </string-array>
    <string-array name="document_subtype">
        <item>Factura</item>
        <item>Llave</item>
        <item>Póliza</item>
        <item>Pagos</item>
        <item>Otros</item>
    </string-array>
    <string name="document_details">Detalles de documento</string>
    <string name="need_permissions">Para poder usar la camara y guardar imagenes se necesita que la
    app tenga permisos de acceso</string>
    <string name="grand_permissions">Otorgar permisos</string>
    <string name="cancel">Cancelar</string>
    <string name="auditory_service">Servicio de auditoría</string>
    <string name="referred">Referido</string>
    <string name="auditory_service_status_pending">Pendiente</string>
    <string name="auditory_service_status_completed">Completo</string>
    <string name="no_auditory_services_msg">Aún no has solicitado ningún servicio de auditoria este mes.
        Recuerda que tienes derecho a uno gratis por mes.</string>
    <string name="request_auditory">Solicitar auditoría</string>
    <string name="documents_sheltered">Documentos resguardados</string>
    <string name="location">Ubicación</string>
    <string name="auditory_service_success">El servicio de auditoría a sido confirmado con éxito</string>
    <string name="see_you_soon">Te esperamos pronto en nuestras instalaciones</string>
    <string name="auditory_request_warning_msg">Has solicitado el servicio de auditoría de este mes.
    Recuerda que tienes derecho a uno por mes.</string>
    <string name="auditory_scheduled">Programado</string>
    <string name="titular_name">Nombre del titular</string>
    <string name="credit_card_name">Número de tarjeta de crédito</string>
    <string name="expiration_date">Fecha de vencimiento</string>
</resources>