<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_credi_card_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreditCardDetailActivity">

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/titular_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titular_name"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="5dp"
        android:layout_below="@id/toolbar"/>

    <TextView
        android:id="@+id/titular_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/greyDark"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/titular_name_label"/>

    <TextView
        android:id="@+id/credit_card_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_card_name"
        android:textSize="18sp"
        android:layout_marginTop="19dp"
        android:paddingBottom="5dp"
        android:layout_below="@+id/titular_name"
        android:layout_alignStart="@+id/credit_card_number" />

    <TextView
        android:id="@+id/credit_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/greyDark"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/credit_card_number_label"/>

    <TextView
        android:id="@+id/expire_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expiration_date"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="5dp"
        android:layout_below="@id/credit_card_number"/>

    <TextView
        android:id="@+id/expire_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/greyDark"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/expire_date_label"/>

    <TextView
        android:id="@+id/cvv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cvv"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="5dp"
        android:layout_below="@id/expire_date"/>

    <TextView
        android:id="@+id/cvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/greyDark"
        android:textSize="15sp"
        android:text="***"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/cvv_label"/>

    <TextView
        android:id="@+id/principal_payment_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cvv"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:text="Convertir en método de pago principal"
        android:textColor="@color/greyNormal" />

    <CheckBox
        android:id="@+id/main_credit_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/principal_payment_method"
        android:layout_alignParentEnd="true"
        android:checked="true"
        android:enabled="false"
        android:padding="10dp"
        app:buttonTint="@color/greenDarli" />


    <Button
        android:id="@+id/delete_credit_card"
        android:background="@drawable/boton_redondo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/delete_document" />


</RelativeLayout>
