<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <Button
        style="@style/ButtonNormal"
        android:id="@+id/btnPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:text="@string/pay_and_continue"/>
    <ImageView
        android:id="@+id/imgBoveda"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"/>
    <!--<TextView
        android:id="@+id/confirmationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgBoveda"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:text="@string/signup_confirmation"
        android:textSize="14sp"
        android:textColor="@color/text_black"/>-->
    <TextView
        android:id="@+id/chargeTitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgBoveda"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:text="@string/finish_signup"
        android:textSize="18sp"
        android:textColor="@color/text_black"/>
    <TextView
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chargeTitle1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:textSize="35sp"
        android:textColor="@color/text_black"/>
    <TextView
        android:id="@+id/chargeTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/amount"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:text="@string/finish_signup2"
        android:textSize="18sp"
        android:textColor="@color/text_black"/>

</RelativeLayout>