<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/boton_redondo"
        android:onClick="addMethod"
        android:textColor="@color/cardview_light_background"
        android:text="@string/next" />


    <LinearLayout
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:background="@drawable/ic_person_black_24dp"
            android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtCardName_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/toolbar">

        <EditText
            android:id="@+id/txtCardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_name"
            android:inputType="textShortMessage|textPersonName"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nombre"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_credit_card"
      />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtCardNumber_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/txtCardName_til">

        <EditText
            android:id="@+id/txtCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/card_number"
            android:inputType="number"
            android:maxLength="16"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numero"
        android:layout_marginStart="20dp"
       >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_calendar_today"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtDateEnd_til"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/txtCardNumber_til">

        <EditText
            android:id="@+id/txtDateEnd"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtCardNumber"
            android:layout_marginTop="20dp"
            android:hint="@string/date_end"
            android:inputType="phone"
            android:maxLength="5"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numero"
        android:layout_marginStart="210dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtCVV_til"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignBottom="@+id/txtDateEnd_til"
        android:layout_toEndOf="@+id/txtDateEnd_til" >

        <EditText
            android:id="@+id/txtCVV"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:hint="@string/cvv"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="infor"
            android:background="@drawable/ic_baseline_help"/>
    </LinearLayout>


    <TextView
        android:layout_marginTop="300dp"
        android:id="@+id/token"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="300dp"
        android:id="@+id/device"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>