<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal">

    <androidx.appcompat.widget.AppCompatButton
        style=""
        android:id="@+id/btnInfo"
        android:onClick="info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="info"
        android:padding="10dp"
        android:background="@drawable/boton_redondo"
        android:textColor="@color/cardview_light_background"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btnLogin"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/contract_service_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Registrase"
        android:onClick="contratar"
        android:layout_marginBottom="10dp"
        android:background="@drawable/boton_redondo"
        android:layout_alignEnd="@+id/btnLogin"
        android:layout_toEndOf="@+id/btnInfo"
        android:textColor="@color/cardview_light_background"
        android:layout_alignParentBottom="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:onClick="login"
        android:background="@drawable/boton_redondo"
        android:textColor="@color/cardview_light_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnInfo"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/login_login_label"
        android:layout_marginBottom="10dp"/>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="40dp"
                android:src="@drawable/logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/login_welcome_msg" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="5dp"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_email_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:id="@+id/login_email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_email_label"
                        android:inputType="number"
                        android:layout_marginEnd="10dp"
                        android:maxLength="10"
                        android:textColorHint="#fff"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="16dp">
                    <EditText
                        android:id="@+id/login_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:hint="@string/login_password_label"
                        android:inputType="textPassword"
                        android:textColorHint="#fff"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/btnRecoverPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="8dp"
                    android:layout_marginTop="130dp"
                    android:onClick="recuperar"
                    android:text="@string/login_password_recovery_label"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18dp"/>
                <TextView
                    android:layout_marginTop="160dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/token"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tokenauth"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>